--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='shortcut icon' href='favicon.ico'>
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Pure JS Exel</title>
-  <link rel='shortcut icon' href='favicon.ico' />
 </head>
 
 <body>
-  <div id='app' class="container"></div>
+  <div id='app' class="container">
+    <div class="exel">
+      <div class="exel__header">
+        <input class='input' value="New Table" />
+        <div>
+          <div class="button">
+            <i class='materail-icons'>
+              delete
+            </i>
+
+          </div>
+          <div class="button">
+
+            <i class='materail-icons'>
+              exit_to_app
+            </i>
+          </div>
+        </div>
+      </div>
+      <div class="exel__toolbar">
+
+      </div>
+      <div class="exel__formula">
+
+      </div>
+      <div class="exel__table">
+
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
