--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='shortcut icon' href='favicon.ico'>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+
   <title>Pure JS Exel</title>
 </head>
 
@@ -30,12 +35,43 @@
           </div>
         </div>
       </div>
+
       <div class="exel__toolbar">
+        <div class="button">
+          <i class='materail-icons'>Left</i>
+        </div>
+
+        <div class="button">
+          <i class='materail-icons'>Center</i>
+        </div>
+
+        <div class="button">
+          <i class='materail-icons'>Right</i>
+        </div>
+
+        <div class="button">
+          <i class='materail-icons'>BOLD</i>
+        </div>
+
+        <div class="button">
+          <i class='material-icons'>IN</i>
+        </div>
+
+        <div class="button">
+          <i class='material-icons'>SOme</i>
+        </div>
+
 
       </div>
+
       <div class="exel__formula">
+        <div class="info">fx</div>
+        <div class="input" contenteditable spellcheck="false">
 
+        </div>
       </div>
+
+
       <div class="exel__table">
 
       </div>
