--- a/src/index.html
+++ b/src/index.html
@@ -16,44 +16,7 @@
 
 <body>
 
-  <div id='app'>
-
-    <div class="db">
-      <div class="db__header">
-        <h1>Dashboard Exel </h1>
-      </div>
-
-      <div class="db__new">
-        <div class="db__view">
-
-          <a href="#" class='db_create'>
-            New <br /> Table
-
-        </div>
-      </div>
-
-      <div class="db__table db__view">
-
-        <div class="db__list_header">
-          <span>Name</span>
-          <span>Date</span>
-        </div>
-
-        <ul class="db__list">
-          <li class="db__record">
-            <a href="#">Table N1</a>
-            <strong>12.06.2020</strong>
-          </li>
-          <li class="db__record">
-            <a href="#">Table n2</a>
-            <strong>12.06.2020</strong>
-          </li>
-        </ul>
-
-      </div>
-    </div>
-
-  </div>
+  <div id='app'></div>
 
 </body>
 
